objects/Solution_Search_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Language__c</fullName>
        <label>Article Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/pkb_Home?id=&quot; + Article_ID__c , Article_Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type_API_Name__c</fullName>
        <label>Article Type API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_ID__c</fullName>
        <label>Category ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Title__c</fullName>
        <label>Category Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frenquency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 per Day</fullName>
                    <default>true</default>
                    <label>1 per Day</label>
                </value>
                <value>
                    <fullName>1 per Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Solution_Search_Alert_Preference__c</fullName>
        <label>Alert Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New And Updated Articles</fullName>
                    <default>true</default>
                    <label>New And Updated Articles</label>
                </value>
                <value>
                    <fullName>Only New Articles</fullName>
                </value>
                <value>
                    <fullName>Only Updated Articles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Article Type</fullName>
                </value>
                <value>
                    <fullName>Category And Article Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Solution_Search_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Article_Type_Subscriptions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Article_Type__c</columns>
        <columns>Category_Title__c</columns>
        <columns>Frenquency__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Solution_Search_Alert__c.Article_Type</value>
        </filters>
        <label>Article Type Alerts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CatArticle_Type_Subscriptions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Solution_Search_Alert__c.Category_And_Article_Type</value>
        </filters>
        <label>Category and Article Type Alerts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_Subscriptions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Solution_Search_Alert__c.Category</value>
        </filters>
        <label>Category Alerts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Owner_Article_Alerts</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Roger</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Klump</value>
        </filters>
        <label>Change Owner Article Alerts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Customer_Care_Data_Admin</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SSA-{00000}</displayFormat>
        <label>Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Alerts</pluralLabel>
    <recordTypes>
        <fullName>Article</fullName>
        <active>true</active>
        <label>Article</label>
    </recordTypes>
    <recordTypes>
        <fullName>Article_Type</fullName>
        <active>true</active>
        <label>Article Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Category</fullName>
        <active>true</active>
        <label>Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Category_And_Article_Type</fullName>
        <active>true</active>
        <label>Category And Article Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>